# OpenAudioLibraryStudy

./: .README.md.swp  README.md  openAudioLibs.md  openLibs.md  update.sh
CMAKE/: CMakeLists.txt  CMakelist.txt
CUDA/: 0_malloc.cu  10_converting.cu  1_add.cu  2_matrixMul.cu  3_sharedMemory.cu  4_sharedMul.cu  5_cublas.cu  5_cublas_v2.cu  6_stream.cu  7_batchedCublas.cu  8_atomic.cu  9_hibrid.cu  Makefile  deviceQuery  mal.c  nvprof.sh  temp_batched.cu  temp_stream.cu
Makefile/: .Makefile.swp  Makefile  hello  hello.c  hello.h  sol  sol.c
Makefile/1_basic/: Makefile  hello.c  main.c
Makefile/2_macro/: Makefile
Makefile/3_library/: Makefile  main.c  my_lib.c
Makefile/4_directory/: Makefile  main.c
Makefile/4_directory/include/: hello.h  t1.h
Makefile/4_directory/src/: t1.c
Makefile/5_wildcard/: Makefile  main.c
Makefile/5_wildcard/d1/: c1.c  c2.c
Makefile/5_wildcard/d2/: c3.c
Makefile/5_wildcard/head/: h.h
Makefile/lib/: hello  main.c
Makefile/src/: hello.c
OpenMP/: Makefile  a1.c  s1.c
RtAudio/: .CMakeLists.txt.swp  CMakeLists.txt  README.md  git_command.sh  monitor.c  record.cpp
RtAudio/include/: README.md
RtAudio_scratch/: CMakeLists.txt  RtAudio.cpp  setting.cpp
blas/MKL/: build_mkl-lab-soultuon.sh  gemm.c
blas/OpenBLAS/: Makefile  gemm  gemm.c
manuals/: BeamformIt.md  CBLAS.md  CIGLET.md  CMUSphinx.md  CUDA.md  CUDAerror.md  Darknet.md  Docker.md  HTK.md  Kaldi.md  Makefile.md  OpenMP  OpenMP.md  OpenMPI.md  Redmine.md  RtAudio.md  a.md  b.mc  b.md  cmake.md  git.md  gitlab.md  openAudioLibs.md  openSMILE.md  ref.md  temp.md
